Updated based on feedback

--- a/sampleapp.xcodeproj/xcshareddata/xcschemes/sampleapp.xcscheme
+++ b/sampleapp.xcodeproj/xcshareddata/xcschemes/sampleapp.xcscheme
@@ -23,7 +23,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "app-green-filesystem"
+      buildConfiguration = "app-red-built-in-camera"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "app-green-camera-roll"
+      buildConfiguration = "app-red-built-in-camera"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
